apps/aghome/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aghome-web
  namespace: aghome
  labels:
    app: aghome
spec:
  selector:
    app: aghome
  ports:
    - name: http
      port: 3000
      targetPort: 3000
      protocol: TCP
  type: ClusterIP
---
apiVersion: v1
kind: Service
metadata:
  name: aghome-dot
  namespace: aghome
  labels:
    app: aghome
spec:
  selector:
    app: aghome
  ipFamilyPolicy: PreferDualStack
  ports:
    - name: dns-over-tls
      port: 853
      targetPort: 853
      nodePort: 853
      protocol: TCP
    - name: dns-over-quic
      port: 853
      targetPort: 853
      nodePort: 853
      protocol: UDP
  type: NodePort
