apps/aghome/route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: aghome
  namespace: aghome
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: HostRegexp(`^(.+\.)?dns\.licht\.moe$`)
      services:
        - name: aghome-web
          port: 3000
  tls:
    secretName: dns-tls
